Added a dark theme

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Major Training</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="dark.css">
     <script src="data.js" type="text/javascript"></script>
     <script src="main.js" type="text/javascript"></script>
 </head>
@@ -85,6 +86,10 @@
 
     <div class="stagebanner">
         <i>Stage 2 is under construction</i>
+    </div>
+
+    <div class="settings">
+        <input type="button" name="theme" value="Change Theme">
     </div>
 
 </div>
