Added: Button theme and Reset styles

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 
     <div class="settings">
         <input type="button" name="theme" value="Change Theme">
+        <input type="button" name="reset" value="Reset">
     </div>
 
 </div>
