Added: more logic
Can now generate numbers from the format string
Level selection works (just doesn't do anything yet)
Changed reset button to only work on double click

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 <small>2 and 3 digit numbers</small>
                 <span not-tried></span>
             </li>
-            <li format='3r'>
+            <li format='3|3'>
                 <h4>Level 4 <span></span></h4>
-                <small>3 digit numbers with repeats</small>
+                <small>2 groups of 3 digit numbers</small>
                 <span not-tried></span>
             </li>
             <li format='4'>
@@ -90,7 +90,7 @@
 
     <div class="settings">
         <input type="button" name="theme" value="Change Theme">
-        <input type="button" name="reset" value="Reset">
+        <input type="button" name="reset" value="Reset" title="Double click to reset the entire app">
     </div>
 
 </div>
