Added: Skip button (no logic)

--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
 
     <main>
         <p class="generated">12334</p>
+        <div class="skip">
+            <a>Skip &rarr;</a>
+        </div>
         <input type="text" name="text" maxlength="100">
     </main>
 
