--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Major Training</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="dark.css">
+    <link rel="icon" href="major_training_icon.ico">
     <script src="data.js" type="text/javascript"></script>
     <script src="main.js" type="text/javascript"></script>
 </head>
