Added: Logic map

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="dark.css">
     <link rel="icon" href="major_training_icon.ico">
     <script src="data.js" type="text/javascript"></script>
+    <script src="game_logic.js" type="text/javascript"></script>
     <script src="main.js" type="text/javascript"></script>
 </head>
 <body>
@@ -103,7 +104,7 @@
         <div class="skip">
             <a>Skip &rarr;</a>
         </div>
-        <input type="text" name="text" maxlength="100">
+        <input type="text" name="main_input" maxlength="100">
     </main>
 
     <footer>
