Added: noscript notifier

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 </head>
 <body>
 
+<!-- This warning only pops up if the user doesn't have JS -->
+<noscript>
+<div class="no-js">
+    Major Training doesn't work without JavaScript.. Sorry :( <br>
+    <small>If you have JavaScript enabled and this is here, <a href="github.com/cemrajc/majortraining">you should definitely file a bug report.</a></small>
+</div>
+</noscript>
+
 <div class="menucolumn">
     <div class="logo">
     <p>Major Training</p>
