--- a/index.html
+++ b/index.html
@@ -40,25 +40,25 @@
     <div class="select">
         <i>Level Select:</i>
         <ul>
-            <li><h4>Level 1<span>0</span></h4>
+            <li levelnum='1' selected><h4>Level 1<span>0</span></h4>
             <small>2 digit numbers only</small><span null></span></li>
-            <li><h4>Level 2<span>0</span></h4>
+            <li levelnum='2'><h4>Level 2<span>0</span></h4>
             <small>3 digit numbers only</small><span null></span></li>
-            <li><h4>Level 3<span>0</span></h4>
+            <li levelnum='3'><h4>Level 3<span>0</span></h4>
             <small>2 and 3 digit numbers</small><span null></span></li>
-            <li><h4>Level 4<span>0</span></h4>
+            <li levelnum='4'><h4>Level 4<span>0</span></h4>
             <small>2 groups of 3 digit numbers</small><span null></span></li>
-            <li><h4>Level 5<span>0</span></h4>
+            <li levelnum='5'><h4>Level 5<span>0</span></h4>
             <small>4 digit numbers only</small><span null></span></li>
-            <li><h4>Level 6<span>0</span></h4>
+            <li levelnum='6'><h4>Level 6<span>0</span></h4>
             <small>2 groups of 2-4 digit numbers</small><span null></span></li>
-            <li><h4>Level 7<span>0</span></h4>
+            <li levelnum='7'><h4>Level 7<span>0</span></h4>
             <small>4 groups of 2-3 digit numbers</small><span null></span></li>
-            <li><h4>Level 8<span>0</span></h4>
+            <li levelnum='8'><h4>Level 8<span>0</span></h4>
             <small>Phone numbers</small><span null></span></li>
-            <li><h4>Level 9<span>0</span></h4>
+            <li levelnum='9'><h4>Level 9<span>0</span></h4>
             <small>Credit card numbers</small><span null></span></li>
-            <li><h4>Level 10<span>0</span></h4>
+            <li levelnum='10'><h4>Level 10<span>0</span></h4>
             <small>40 digit mega numbers</small><span null></span></li>
         </ul>
     </div>
