Refactor: Changed things to constructor pattern
This is so that objects can init themselves. Having an entirely separate
init routine for the whole program is messy - keeping things
in segments, but still easier to maintain.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="dark.css">
     <link rel="icon" href="major_training_icon.ico">
 
-    <script src="main.js" type="text/javascript"></script>
+    <script src="main.js" type="text/javascript" defer></script>
 </head>
 <body>
 
