Added: Settings / inputs logic (theme and reset)

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <small>Phone numbers</small><span null></span></li>
             <li levelnum='9'><h4>Level 9<span>0</span></h4>
             <small>Credit card numbers</small><span null></span></li>
-            <li levelnum='10'><h4>Level 10<span>0</span></h4>
+            <li levelnum='10'><h4>Level 10<span>o</span></h4>
             <small>40 digit mega numbers</small><span null></span></li>
         </ul>
     </div>
