Added: More responsiveness

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="dark.css">
     <link rel="icon" href="major_training_icon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <script src="main.js" type="text/javascript" defer></script>
 </head>
