Updated: Markup and Scoring logic

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div class="menucolumn">
     <div class="logo">
     <p>Major Training</p>
-    <small>Visit on <a href="github.com/cemrajc/majortraining">Github</a></small>
+    <small>Visit on <a href="github.com/cemrajc/majortraining/releases/latest">Github</a> to download</small>
     </div>
 
     <div class="readout">
