--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="major_training_icon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <script src="fontscale.js" type="text/javascript"></script>
     <script src="main.js" type="text/javascript" defer></script>
 </head>
 <body>
@@ -78,7 +79,7 @@
 <div class="maincolumn">
 
     <main>
-        <p class="generated">12334</p>
+        <p class="generated" fs-max-width="90" fs-max-height="90"><small>:(</small></p>
         <div class="skip">
             <a>Skip &rarr;</a>
         </div>
