Fixed: Browser support issues
Firfox (and many others) do not like the webkit
`event.path` array that is attached to the event object
(in chrome at least). Stopped using it, and switched to a cruder
system.

Also quickly fixed a link issue

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 <noscript>
 <div class="no-js">
     Major Training doesn't work without JavaScript.. Sorry :( <br>
-    <small>If you have JavaScript enabled and this is here, <a href="github.com/cemrajc/majortraining">you should definitely file a bug report.</a></small>
+    <small>If you have JavaScript enabled and this is here, <a href="http://github.com/cemrajc/majortraining">you should definitely file a bug report.</a></small>
 </div>
 </noscript>
 
 <div class="menucolumn">
     <div class="logo">
     <p>Major Training</p>
-    <small>Visit on <a href="github.com/cemrajc/majortraining/releases/latest">Github</a> to download</small>
+    <small>Visit on <a href="http://github.com/cemrajc/majortraining/releases/latest">Github</a> to download</small>
     </div>
 
     <div class="readout">
