--- a/index.html
+++ b/index.html
@@ -80,8 +80,10 @@
 
     <main>
         <p class="generated" fs-max-width="90" fs-max-height="90"><small>:(</small></p>
-        <div class="skip">
-            <a>Skip &rarr;</a>
+        <div class="numbar">
+            <span class="count">0</span>
+            <span class="spacer"></span>
+            <a class='skip'>Skip &rarr;</a>
         </div>
         <input type="text" name="main_input" maxlength="100">
     </main>
