--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     </div>
 
     <div class="readout">
-        <div class="score">502</div>
-        <div class="highscore">6625</div>
+        <div class="score">0</div>
+        <div class="highscore">0</div>
         <h3 class="level">Level 1</h3>
         <p class="levelinfo">2 digit numbers only</p>
     </div>
@@ -43,25 +43,25 @@
         <i>Level Select:</i>
         <ul>
             <li levelnum='1' selected><h4>Level 1<span>0</span></h4>
-            <small>2 digit numbers only</small><span null></span></li>
+            <small>2 digit numbers only</small><span progression="0"></span></li>
             <li levelnum='2'><h4>Level 2<span>0</span></h4>
-            <small>3 digit numbers only</small><span null></span></li>
+            <small>3 digit numbers only</small><span progression="0"></span></li>
             <li levelnum='3'><h4>Level 3<span>0</span></h4>
-            <small>2 and 3 digit numbers</small><span null></span></li>
+            <small>2 and 3 digit numbers</small><span progression="0"></span></li>
             <li levelnum='4'><h4>Level 4<span>0</span></h4>
-            <small>2 groups of 3 digit numbers</small><span null></span></li>
+            <small>2 groups of 3 digit numbers</small><span progression="0"></span></li>
             <li levelnum='5'><h4>Level 5<span>0</span></h4>
-            <small>4 digit numbers only</small><span null></span></li>
+            <small>4 digit numbers only</small><span progression="0"></span></li>
             <li levelnum='6'><h4>Level 6<span>0</span></h4>
-            <small>2 groups of 2-4 digit numbers</small><span null></span></li>
+            <small>2 groups of 2-4 digit numbers</small><span progression="0"></span></li>
             <li levelnum='7'><h4>Level 7<span>0</span></h4>
-            <small>4 groups of 2-3 digit numbers</small><span null></span></li>
+            <small>4 groups of 2-3 digit numbers</small><span progression="0"></span></li>
             <li levelnum='8'><h4>Level 8<span>0</span></h4>
-            <small>Phone numbers</small><span null></span></li>
+            <small>Phone numbers</small><span progression="0"></span></li>
             <li levelnum='9'><h4>Level 9<span>0</span></h4>
-            <small>Credit card numbers</small><span null></span></li>
+            <small>Credit card numbers</small><span progression="0"></span></li>
             <li levelnum='10'><h4>Level 10<span>o</span></h4>
-            <small>40 digit mega numbers</small><span null></span></li>
+            <small>40 digit mega numbers</small><span progression="0"></span></li>
         </ul>
     </div>
 
