Added: Slide out panel
Getting ready to implement the learning assistant.
Found out that the main program is not enough - people
(including me) need some help to keep learning :P

--- a/index.html
+++ b/index.html
@@ -93,5 +93,12 @@
     </footer>
 </div>
 
+<div class="assistantcolumn">
+    <div class="button"> <span></span></div>
+    <div class="panel">
+    thing
+    </div>
+</div>
+
 </body>
 </html>
