Added: MS reference and markup
Now have an auto-filling table and some links.
Also added inputs for the generator.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,29 @@
 <div class="assistantcolumn">
     <div class="button"> <span></span></div>
     <div class="panel">
-    thing
+        <header>Learning Assistant</header>
+        <table class="reference">
+            <caption>Major mnemonic reference:</caption>
+            <thead>
+                <tr>
+                    <th>Number</th>
+                    <th>Corresponding Letters</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- This will AUTOFILL from main.js -->
+            </tbody>
+        </table>
+        <p>Remember that "7" is hard sounds, while "6" is soft sounds. Refer to <a href="https://en.wikipedia.org/w/index.php?title=Mnemonic_major_system" title="External Link: Wikipedia">this page</a> for more details.</p>
+
+        <div class="generator">
+            <h3>Word Generator</h3>
+            <h4>Enter a number:</h4>
+            <input type="number" value="1">
+            <h4>Corresponding Word:</h4>
+            <p>Use sparingly. At first, it will be hard to make words yourself - use this tool only when you believe it's impossible.</p>
+        </div>
+
     </div>
 </div>
 
