Added: Some more styling for the assistant
Still working on functionality...

--- a/index.html
+++ b/index.html
@@ -97,19 +97,21 @@
     <div class="button"> <span></span></div>
     <div class="panel">
         <header>Learning Assistant</header>
-        <table class="reference">
-            <caption>Major mnemonic reference:</caption>
-            <thead>
-                <tr>
-                    <th>Number</th>
-                    <th>Corresponding Letters</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- This will AUTOFILL from main.js -->
-            </tbody>
-        </table>
-        <p>Remember that "7" is hard sounds, while "6" is soft sounds. Refer to <a href="https://en.wikipedia.org/w/index.php?title=Mnemonic_major_system" title="External Link: Wikipedia">this page</a> for more details.</p>
+        <div class="reference">
+            <table>
+                <caption>Major mnemonic reference:</caption>
+                <thead>
+                    <tr>
+                        <th>Number</th>
+                        <th>Corresponding Letters</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- This will AUTOFILL from main.js -->
+                </tbody>
+            </table>
+            <p>Remember that "7" is hard sounds, while "6" is soft sounds. Refer to <a href="https://en.wikipedia.org/w/index.php?title=Mnemonic_major_system" title="External Link: Wikipedia">this page</a> for more details.</p>
+        </div>
 
         <div class="generator">
             <h3>Word Generator</h3>
