--- a/index.html
+++ b/index.html
@@ -116,9 +116,13 @@
         <div class="generator">
             <h3>Word Generator</h3>
             <h4>Enter a number:</h4>
-            <input type="number" value="1">
+            <div class="inputs">
+                <input type="number" value="1" min="0" max="9999" step="1">
+                <button>Go</button>
+            </div>
             <h4>Corresponding Word:</h4>
-            <p>Use sparingly. At first, it will be hard to make words yourself - use this tool only when you believe it's impossible.</p>
+            <span><i>None Generated</i></span>
+            <p>Use sparingly. At first, it will be hard to generate words yourself - please only use this tool when you believe it's impossible.</p>
         </div>
 
     </div>
