--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="major_training_icon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <script src="word_generator.js" type="text/javascript"></script>
     <script src="fontscale.js" type="text/javascript"></script>
     <script src="main.js" type="text/javascript" defer></script>
 </head>
@@ -121,7 +122,7 @@
                 <button>Go</button>
             </div>
             <h4>Corresponding Word:</h4>
-            <span><i>None Generated</i></span>
+            <span class="generated_word"><i>None Generated</i></span>
             <p>Use sparingly. At first, it will be hard to generate words yourself - please only use this tool when you believe it's impossible.</p>
         </div>
 
