Refactor: Now with Gulp and SASS!

--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html>
 <head>
     <title>Major Training</title>
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="dark.css">
-    <link rel="icon" href="major_training_icon.ico">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/dark.css">
+    <link rel="icon" href="images/major_training_icon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script src="word_generator.js" type="text/javascript"></script>
-    <script src="fontscale.js" type="text/javascript"></script>
-    <script src="main.js" type="text/javascript" defer></script>
+    <script src="js/main.js" type="text/javascript" defer></script>
 </head>
 <body>
 
