--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <title>Major Training</title>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/dark.css">
     <link rel="icon" href="images/major_training_icon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script src="js/main.js" type="text/javascript" defer></script>
+    <script src="js/main.js" type="text/javascript"></script>
+    <script src="js/init.js" type="text/javascript"></script>
 </head>
 <body>
 
