Modified: Readme and Contributors
Added some features for offline file uploading

--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
             </div>
             <h4>Corresponding Word:</h4>
             <span class="generated_word"><i>None Generated</i></span>
-            <p>Use sparingly. At first, it will be hard to generate words yourself - please only use this tool when you believe it's impossible.</p>
+            <p class="comment">Use sparingly. At first, it will be hard to generate words yourself - please only use this tool when you believe it's impossible.</p>
+            <input type="file" class="submit_db">
+            <p class="submit_db"><b>Load in the database please :P</b><br> (Select the "major_database.json" file from the database folder). You should only need to do this once.</p>
         </div>
 
     </div>
