Made some important updates

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <button id="generate_nums">Go</button>
                     </div>
                     <h4>Possible Numbers:</h4>
-                    <span class="generated_nums"><span class="dancing_man"></span></span>
+                    <span class="generated_nums"><span class="dancing_man" title="Dancing glasses dude XD"></span></span>
                     <p class="comment"><i><b>Note:</b> each possible number is limited to 16 digits</i><p>
 
                     <h3>Word Generator</h3>
