Fixed some more bugs

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Learn how to remember long numbers with the Major System">
 
     <script src="js/main.js" type="text/javascript"></script>
     <script src="js/init.js" type="text/javascript"></script>
@@ -137,7 +138,7 @@
                         <button id="generate_nums">Go</button>
                     </div>
                     <h4>Possible Numbers:</h4>
-                    <span class="generated_nums"><span class="dancing_man"></span></span>
+                    <span class="generated_nums"><span class="dancing_man" title="Dancing glasses dude XD"></span></span>
                     <p class="comment"><i><b>Note:</b> each possible number is limited to 16 digits</i><p>
 
                     <h3>Word Generator</h3>
@@ -172,6 +173,10 @@
                         </tbody>
                     </table>
                     <p>Remember that "7" is hard sounds, while "6" is soft sounds. Refer to <a href="https://en.wikipedia.org/w/index.php?title=Mnemonic_major_system" title="External Link: Wikipedia">this page</a> for more details.</p>
+                    <br>
+                    <small><b>Note about scores:</b> Your score is based on both average speed and the length of your answer. It is important to realise that your score is not accumulative, so high scores become considerably harder to acheive.</small>
+                    <br><br>
+                    <small>Your progress should be autosaved (you can check by refreshing the browser window). If it is not, then your browser may not be new enough to handle the save mechanism.</small>
                 </div>
             </div>
         </div>
