UI Update: Finally added icons

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <input type="radio" id="drawer-tab-3" name="drawer-tabs" value="3">
 
         <div class="tab-buttons">
-            <label for="drawer-tab-1">Levels</label>
-            <label for="drawer-tab-2">Generator</label>
-            <label for="drawer-tab-3">Reference</label>
+            <label for="drawer-tab-1"><span class="ico-levels"> </span>Levels</label>
+            <label for="drawer-tab-2"><span class="ico-generator"> </span>Generator</label>
+            <label for="drawer-tab-3"><span class="ico-reference"> </span>Reference</label>
         </div>
 
         <div class="tab-container">
@@ -120,7 +120,7 @@
                 </div>
 
                 <div class="settings">
-                    <h5> Settings: </h5>
+                    <h5> Settings: <span class="ico-settings"> </span></h5>
                     <div class="buttons">
                         <input type="button" name="theme" value="Change Theme">
                         <input type="button" name="reset" value="Reset" title="Double click to reset the entire app">
