Made easier and better skipping
Added a keyboard shortcut to the skip button to make it easier to do.
Also made some rankings easier to acheive.

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <div class="numbar">
             <span class="count">0</span>
             <span class="spacer"></span>
-            <a class='skip'>Skip &rarr;</a>
+            <a class='skip' title="Shift + Enter works too ;)">Skip &rarr;</a>
         </div>
         <input type="text" name="main_input" maxlength="100">
     </div>
