--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </div>
 
                 <div class="settings">
-                    <h5> Settings: <span class="ico-settings"> </span></h5>
+                    <h5> <span class="ico-settings"></span> Settings: </h5>
                     <div class="buttons">
                         <input type="button" name="theme" value="Change Theme">
                         <input type="button" name="reset" value="Reset" title="Double click to reset the entire app">
