Changed default level to level 0

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
                     <div class="select" id="stage-select-1">
                         <i>Level Select:</i>
                         <ul>
-                            <li levelnum='1' selected><h4>Level 1<span>0</span></h4>
+                            <li levelnum='0' selected><h4>Level 0<span>0</span></h4>
+                            <small>Practise with single numbers</small><span progression="0"></span></li>
+                            <li levelnum='1'><h4>Level 1<span>0</span></h4>
                             <small>2 digit numbers only</small><span progression="0"></span></li>
                             <li levelnum='2'><h4>Level 2<span>0</span></h4>
                             <small>3 digit numbers only</small><span progression="0"></span></li>
@@ -95,7 +97,9 @@
                     <div class="select" id="stage-select-2">
                         <i>Level Select:</i>
                         <ul>
-                            <li levelnum='1' selected><h4>Level 1<span>0</span></h4>
+                            <li levelnum='0' selected><h4>Level 0<span>0</span></h4>
+                            <small>Practise with single letters</small><span progression="0"></span></li>
+                            <li levelnum='1'><h4>Level 1<span>0</span></h4>
                             <small>2 digit numbers only</small><span progression="0"></span></li>
                             <li levelnum='2'><h4>Level 2<span>0</span></h4>
                             <small>3 digit numbers only</small><span progression="0"></span></li>
